--- a/simpleshop/package.json
+++ b/simpleshop/package.json
@@ -14,8 +14,10 @@
     "@chakra-ui/react": "^2.0.0-next.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@next/bundle-analyzer": "^12.3.1",
     "@supabase/supabase-js": "^1.35.6",
     "axios": "^0.21.1",
+    "firebase": "^9.12.1",
     "framer-motion": "^4.1.17",
     "js-cookie": "^3.0.1",
     "next": "^12.2.5",
